# JQuants-dataloader

./: .gitignore  README.md  controller.py  deta_uploader.py  historical_controller.py  main.py  pyproject.toml
src/: announcement_info_loader.py  deta_uploader.py  equity_price_loader.py  fin_announcement_loader.py  fin_statement_loader.py  finact_info_loader.py  historical_listed_info_loader.py  index_price_loader.py  listed_info_loader.py  prices_daily_quotes_loader.py  security_info_loader.py  trade_info_loader.py  utils.py
